<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email"
            android:textColorHint="@color/nintendoRed"
            android:ems="10"
            android:id="@+id/editText"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" android:layout_marginEnd="20dp" android:layout_marginRight="20dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/nintendoRed"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" android:layout_marginEnd="20dp" android:layout_marginRight="20dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes, We've got superpowers! :D"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.215"/>
    <Button
            android:text="@string/action_sign_in_short"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/action_sign_up_short"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="31dp" android:layout_marginRight="31dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.511"/>

</android.support.constraint.ConstraintLayout>